<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:background="@drawable/header_image"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:padding="16dp"
        android:orientation="vertical"
        android:gravity="bottom">


        <TextView
            android:textColor="#ffffff"
            android:textSize="14sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:visibility="@string/drawer_visibility"/>

        <TextView
            android:textColor="#ffffff"
            android:textSize="12sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_email"
            android:paddingTop="6dp"
            android:visibility="@string/drawer_visibility"/>

    </LinearLayout>

</LinearLayout>