<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#e7e7e7" >

	<include
		android:id="@+id/toolbar"
		layout="@layout/toolbar"
		android:layout_width="match_parent"
		android:layout_height="wrap_content" />
    
    	<RelativeLayout
    	    android:id="@+id/lytOrder"
			android:layout_below="@id/toolbar"
    	    android:layout_width="fill_parent"
    	    android:layout_height="wrap_content"
    	    android:visibility="gone" >

		    <RelativeLayout
		        android:id="@+id/lytTotal"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:padding="5dp"
		        android:background="@color/ColorPrimary">
	
		        <TextView 
		            android:id="@+id/txtTotalLabel"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:textColor="@color/white"
		            android:textStyle="bold"
		            android:textSize="18sp"
		            android:layout_alignParentLeft="true"
		            android:layout_centerVertical="true"/>
		        
		        <TextView 
		            android:id="@+id/txtTotal"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:textColor="@color/white"
		            android:textStyle="bold"
		            android:textSize="18sp"
		            android:layout_alignParentRight="true"
		            android:layout_centerVertical="true"/>
		    </RelativeLayout>
		    <TextView 
		        android:id="@+id/txtDetail"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:background="#000"
		        android:text="@string/detail"
		        android:textColor="@color/white"
		        android:textSize="14sp"
		        android:textStyle="bold"
		        android:padding="5dp"
				android:layout_below="@+id/lytTotal"/>
	        <ListView 
	            android:id="@+id/listOrder"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:fadeScrollbars="true"
	            android:fastScrollEnabled="true"
	            android:divider="@null"
				android:layout_below="@+id/txtDetail"/>

			<com.github.clans.fab.FloatingActionMenu
				android:id="@+id/menu_red"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_alignParentBottom="true"
				android:layout_alignParentRight="true"
				android:paddingRight="10dp"
				app:layout_collapseMode="pin"
				android:paddingBottom="10dp"
				android:paddingLeft="10dp"
				fab:menu_labels_ellipsize="end"
				fab:menu_labels_singleLine="true"
				fab:menu_backgroundColor="#ccffffff"
				fab:menu_fab_size="mini">

				<com.github.clans.fab.FloatingActionButton
					android:id="@+id/fabCheckout"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:src="@drawable/ic_checkout_circle"
					fab:fab_size="mini"
					fab:fab_label="@string/action_checkout" />

				<com.github.clans.fab.FloatingActionButton
					android:id="@+id/fabClear"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:src="@drawable/ic_delete"
					fab:fab_size="mini"
					fab:fab_label="@string/action_clear" />

			</com.github.clans.fab.FloatingActionMenu>


		</RelativeLayout>
		
		<ProgressBar
			android:id="@+id/prgLoading"
		    android:layout_height="wrap_content" 
		    android:layout_width="wrap_content"
		    android:layout_centerInParent="true" />
		<TextView 
		        android:id="@+id/txtAlert"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/no_order"
		        android:textSize="14sp"
		    	android:layout_centerInParent="true" 
		    	android:visibility="gone"/>
</RelativeLayout>
